--- a/Sets and Functions: Dinosaurs.ipynb
+++ b/Sets and Functions: Dinosaurs.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JDestroyer5/Discrete_Mathmatics/blob/main/Project_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JDestroyer5/Discrete_Mathmatics/blob/main/Sets%20and%20Functions%3A%20Dinosaurs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -252,11 +252,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xbm3BX-slfAs",
-        "outputId": "bd1bc49b-edd8-4396-fb0f-452163633c78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xbm3BX-slfAs",
+        "outputId": "bd1bc49b-edd8-4396-fb0f-452163633c78"
       },
       "source": [
         "ACapC = []\n",
@@ -282,11 +282,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OBXPseWJlf_8",
-        "outputId": "aa659cff-48fb-410e-a733-6ffd48a2bb4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OBXPseWJlf_8",
+        "outputId": "aa659cff-48fb-410e-a733-6ffd48a2bb4c"
       },
       "source": [
         "BCapC = []\n",
@@ -321,11 +321,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dWABQgAWl-xq",
-        "outputId": "6b6abf64-8bdc-4416-e796-1ba1e1b99f71",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dWABQgAWl-xq",
+        "outputId": "6b6abf64-8bdc-4416-e796-1ba1e1b99f71"
       },
       "source": [
         "AComplement = []\n",
@@ -369,11 +369,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ilh6bBeWmbRO",
-        "outputId": "89f61a1c-1900-4bae-f94e-f4c92552fb86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ilh6bBeWmbRO",
+        "outputId": "89f61a1c-1900-4bae-f94e-f4c92552fb86"
       },
       "source": [
         "BComplement = []\n",
@@ -417,11 +417,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O9-N2ajcmblx",
-        "outputId": "2c342347-c1d9-4e17-f127-0782a0bc9016",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O9-N2ajcmblx",
+        "outputId": "2c342347-c1d9-4e17-f127-0782a0bc9016"
       },
       "source": [
         "CComplement = []\n",
@@ -483,11 +483,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y4nHwUydobK-",
-        "outputId": "94bc01d0-57a6-4f68-d5f5-cbd5b2dec6e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y4nHwUydobK-",
+        "outputId": "86a8670f-86b8-486c-f787-27613cf0cce5"
       },
       "source": [
         "def DPpowerset(s):\n",
@@ -499,7 +499,7 @@
         "\n",
         "DPpowerset(A)"
       ],
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +577,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 28
         }
       ]
     },
