--- a/Sets and Functions: Dinosaurs.ipynb
+++ b/Sets and Functions: Dinosaurs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Project 1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMS35QdoOfGUwk0aSZk3GCq",
+      "authorship_tag": "ABX9TyPIrHlkf9RzDIXyt9wpZHVe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,7 +265,7 @@
         "    ACapC.append(dinosaur)\n",
         "ACapC"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +295,7 @@
         "    BCapC.append(dinosaur)\n",
         "BCapC"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +334,7 @@
         "    AComplement.append(dinosaur)\n",
         "AComplement"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +382,7 @@
         "    BComplement.append(dinosaur)\n",
         "BComplement"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +430,7 @@
         "    CComplement.append(dinosaur)\n",
         "CComplement"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +499,7 @@
         "\n",
         "DPpowerset(A)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,7 +596,19 @@
         "id": "AWRrEi-Fuiwz"
       },
       "source": [
-        "(a) Defining a function."
+        "(a) Defining a function. I will be using the math, numpy, and matplotlib libraries to define the function, the inverse, and to plot"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "31mWx9-ldNXu"
+      },
+      "source": [
+        "function \n",
+        "$$\n",
+        "f(x) = \\sqrt{x}*\\frac{\\sqrt{2x}}{π}\n",
+        "$$\n"
       ]
     },
     {
@@ -605,10 +617,252 @@
         "id": "5U5T3Fld5X0S"
       },
       "source": [
-        ""
+        "import math\n",
+        "\n",
+        "def fun(x):\n",
+        "  return (math.sqrt(x)*(math.sqrt(2*x))/math.pi)"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6UpC__oXuHkV"
+      },
+      "source": [
+        "testing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o0MGxUQatX1_",
+        "outputId": "38165bae-fff2-446d-c41d-3165a2363bc0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "fun(0)"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fu0fdrdWuBjD",
+        "outputId": "2b89a13a-dc2a-4bc6-f2d1-78a210636593",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "fun(5)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.2507907903927658"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "glpcC0x0uD47",
+        "outputId": "ff5d2e0f-5d8a-4083-a71f-fd3daf6499d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "fun(10)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.5015815807855315"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p21uHH-Iqm4z"
+      },
+      "source": [
+        "inverse function \n",
+        "$$\n",
+        "f^{-1}(x) = \\frac{πx}{\\sqrt{2}}\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ND0dnIUwqqO6"
+      },
+      "source": [
+        "def infun(x):\n",
+        "  return ((math.pi*x)/math.sqrt(2))"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-trdtkScxor-"
+      },
+      "source": [
+        "testing again"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HX3GtcsLu0Ap",
+        "outputId": "1a04cb40-bdd9-4540-9f98-e45b4451be6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "infun(0)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9tNXjF-Uxe80",
+        "outputId": "d2b33b03-4e58-4a18-efa6-3f8fc422014a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "infun(2.2507907903927658)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.000000000000001"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Os-X-P-HxfX7",
+        "outputId": "be2dbeea-aeb6-4bf8-9f86-647d3bc7a147",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "infun(4.5015815807855315)"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10.000000000000002"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u5Pwj-wsxzbe"
+      },
+      "source": [
+        "Plotting"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1fk9v4-yx2ie",
+        "outputId": "86ef215b-d7db-4935-d351-a4dd3dc1e32c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        }
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
+        "x = np.arange(-10,10,.1)\n",
+        "plt.plot(x,infun(100))\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-38454e2f5c19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'infun' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
